--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@
     --sidebar-ring: oklch(0.708 0 0);
   }
  
-  .dark {
+  [data-theme='dark'] {
     --sidebar: oklch(0.205 0 0);
     --sidebar-foreground: oklch(0.985 0 0);
     --sidebar-primary: oklch(0.488 0.243 264.376);
