--- a/src/index.css
+++ b/src/index.css
@@ -67,10 +67,7 @@ body {
   min-height: 100vh;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
+
 
 button {
   border-radius: 8px;
@@ -174,6 +171,16 @@ button:focus-visible {
   --sidebar-accent-foreground: oklch(0.985 0 0);
   --sidebar-border: oklch(1 0 0 / 10%);
   --sidebar-ring: oklch(0.556 0 0);
+}
+
+[data-theme="doc"] {
+  --primary: oklch(0.205 0 0);
+  --background: #f9f9f9;
+  --foreground: #222222;
+  --card: #ffffff;
+  --card-foreground: #222222;
+  --muted: #e0e0e0;
+  --border: #cccccc;
 }
 
 @layer base {
